--- a/web_app/templates/history.html
+++ b/web_app/templates/history.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}C++ Code Analyzer - History{% endblock %}
+{% block title %}Code Analyzer - History{% endblock %}
 
 {% block content %}
 <div class="chat-container">
     <div class="chat-header">
         <h2>Analysis History</h2>
-        <p>Your previously analyzed C++ files</p>
+        <p>Your previously analyzed code files</p>
     </div>
-    
+
     <div class="history-container">
         {% if files %}
             <ul class="history-list">
